Fix accordion item overflow.

--- a/styles/main.css
+++ b/styles/main.css
@@ -224,6 +224,7 @@ iframe {
   margin-bottom: 5px;
   display: block;
   cursor: pointer;
+  box-sizing: border-box;
 }
 
 .answers {
